--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,7 @@
   }
 
   .masonry {
-    @apply overflow-y-auto flex gap-x-10 min-h-screen;
+    @apply flex gap-x-10 max-w-screen-8xl;
 
     &-column {
       @apply flex flex-col gap-y-10;
